--- a/client/src/styles/global/_tourist_attraction_page.scss
+++ b/client/src/styles/global/_tourist_attraction_page.scss
@@ -54,6 +54,10 @@
     justify-content: center;
     min-height: 500px;
 
+    @media screen and (max-width: 450px) {
+      padding-inline: 10px;
+    }
+
     .tourist-attraction-main__loading {
       width: 100%;
       min-height: inherit;
@@ -73,6 +77,10 @@
         width: 400px;
         display: flex;
         justify-content: center;
+
+        @media screen and (max-width: 450px) {
+          width: 200px;
+        }
 
         button {
           width: 100%;
@@ -108,7 +116,7 @@
   }
 }
 
-@media screen and (max-width: 420px) {
+@media screen and (max-width: 450px) {
   .tourist-attraction-container {
     .tourist-attraction-header {
       .tour-att-header__filter {
